feat: complete repository reorganization and enhancement
Major refactoring to modernize the Minesweeper project with clean architecture,
comprehensive testing, and professional development practices.

## Architectural Changes

- Introduced clean separation between core game logic and UI implementations
- Created modular package structure: core, swing, javafx
- Extracted Cell and GameBoard classes into independent core package
- Both UI implementations now use shared game logic

## New Structure

- src/main/java/com/unc/gdsc/minesweeper/
  - core/ - Game engine (UI-independent)
    - Cell.java - Cell model with full JavaDoc
    - GameBoard.java - Game logic with comprehensive functionality
  - swing/ - Swing UI implementation
    - MinesweeperSwing.java - Enhanced with menu bar and better UX
  - javafx/ - JavaFX UI implementation
    - MinesweeperFXApp.java - Main application with integrated status bar
    - StatusBarFX.java - Timer and mine counter component
- src/main/resources/
  - styles.css - JavaFX styling
- src/test/java/com/unc/gdsc/minesweeper/core/
  - CellTest.java - Comprehensive unit tests
  - GameBoardTest.java - Parameterized and integration tests

## Build & Development

- Added Maven build system (pom.xml) with:
  - JavaFX dependencies managed automatically
  - JUnit 5 testing framework
  - Maven profiles for Swing/JavaFX
  - Shade plugin for executable JARs
  - JavaDoc generation
  - Source attachment
- Created comprehensive .gitignore for Java projects

## Documentation

- Completely rewrote README.md with:
  - Accurate project description for dual implementations
  - Quick start guide
  - Detailed build instructions
  - Architecture diagrams
  - Maven commands
  - Troubleshooting section
  - Professional badges and formatting
- Added CONTRIBUTING.md with:
  - Development workflow
  - Coding standards
  - Testing guidelines
  - Commit message conventions
  - PR process
  - Bug reporting templates

## Testing

- Implemented JUnit 5 test suite
- Unit